--- a/index.html
+++ b/index.html
@@ -22,25 +22,27 @@
 <body>
 
     <div class="container">
+        <canvas id="field"></canvas>
         <br>
-        <h1
-            style="font-size: 64PX; color: rgb(26, 38, 59); padding-left: 10px; background-color: #c5c5c58a; margin: 0px;">
-            George
-            Muigai</h1>
+        <span
+            style="font-size: 48PX; color: rgb(1, 18, 170); padding-left: 10px; background-color: #c5c5c500; margin: 0px;">
+            I am <span style="font-size: 68px; font-weight: 100;">G</span>eorge Muigai
+        </span>
         <div id="g2" class="flex-span">
             <!-- <hr> -->
-            <span style="letter-spacing: 3px; font-weight: 700;">Hi,</span>
-            <br>
+            <!-- <span style="letter-spacing: 3px; font-weight: 700;">Hi,</span> -->
+            <!-- <br> -->
 
             <span>
-                I am a hobbyist Game Developer and with a passion of crafting with both artistic works and
+                a hobbyist Game Developer with a passion of crafting with both artistic works and
                 code
             </span>
             <br>
             <span>Coding is a way for me to express myself</span>
             <br>
+            <br>
             <span>
-                During my free time I create many web projects some serious and some, it's me just being
+                Some of my free time, I create many web projects some serious and some, it's me just being
                 hype
             </span>
 
@@ -60,13 +62,21 @@
             <br>
             <br>
 
-            <span>My favorite and well understood languages are:</span>
+            <span>Favorite and well understood languages are:</span>
             <ul>
                 <li>Java</li>
                 <li>C#</li>
                 <li>Javascript</li>
             </ul>
+
+            <div class="flex">
+                <div class="bg" style="background-color: rgba(0, 47, 255, 0.308);"></div>
+                <div class="bg" style="background-color: rgba(0, 47, 255, 0.459);"></div>
+                <div class="bg" style="background-color: rgba(0, 43, 235, 0.575);"></div>
+            </div>
         </div>
+
+        <script src="scripts/game.js"></script>
     </div>
 
 </body>
