--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
             </ul>
 
             <div class="flex">
-                <div class="bg" style="background-color: rgba(0, 47, 255, 0.308);"></div>
-                <div class="bg" style="background-color: rgba(0, 47, 255, 0.459);"></div>
-                <div class="bg" style="background-color: rgba(0, 43, 235, 0.575);"></div>
+                <!-- <div class="bg" style="background-color: rgba(0, 47, 255, 0.308);"></div>
+                <div class="bg" style="background-color: rgba(0, 47, 255, 0.459);"></div> -->
+                <!-- <div class="bg" style="background-color: rgba(0, 43, 235, 0.575);"></div> -->
             </div>
         </div>
 
-        <script src="scripts/game.js"></script>
+        <!-- <script src="scripts/game.js"></script> -->
     </div>
 
 </body>
